[feat] GET /history
